# Eruptor

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  cleanBuild.bat  premake5.lua  vcpkg.json
.github/workflows/: msbuild.yml
Eruptor/: premake5.lua
Eruptor/Source/: erupch.cpp  erupch.hpp  main.cpp
Eruptor/Source/Application/: Application.cpp  Application.hpp
Eruptor/Source/Utility/: UniquePointer.hpp
Eruptor/resources/shaders/: shader.frag
Eruptor/source/shader_compiler/: shader_compiler.cpp  shader_compiler.hpp
Eruptor/source/utility/: unique_pointer.hpp
Vulkan/: premake5.lua
cmake/: libraries.cmake  project_defaults.cmake
include/eruptor/: api.hpp  application.hpp  buffer.hpp  constants.hpp  context.hpp  environment.hpp  eruptor.hpp  exception.hpp  hash.hpp  locator.hpp  logger.hpp  pass_key.hpp  pch.hpp  platform.hpp  render_pass.hpp  renderer.hpp  renderer_context.hpp  renderer_device.hpp  runtime_assert.hpp  swap_chain.hpp  type_index.hpp  unique_parameter_pack.hpp  unique_pointer.hpp  vertex.hpp  void_deleter.hpp  window.hpp
resources/shaders/: avarage_luminance.comp  depth.frag  depth.vert  geometry.frag  geometry.vert  histogram.comp  lighting.frag  lighting.vert  shader.frag  shader.vert  test.frag  test.vert  tone_mapping.frag  triangle.frag  triangle.vert
source/: buffer.cpp  constants.hpp  dependencies.hpp  erupch.hpp  locator.cpp  main.cpp  render_pass.cpp  renderer_context.cpp  swap_chain.cpp  vertex.cpp  window.cpp
source/application/: application.cpp  application.hpp
source/builders/: buffer_builder.cpp  buffer_builder.hpp  compute_pipeline_builder.cpp  compute_pipeline_builder.hpp  context_builder.cpp  context_builder.hpp  descriptor_sets_builder.cpp  descriptor_sets_builder.hpp  device_builder.cpp  device_builder.hpp  graphics_pipeline_builder.cpp  graphics_pipeline_builder.hpp  image_builder.cpp  image_builder.hpp  image_view_builder.cpp  image_view_builder.hpp  pipeline_builder.cpp  pipeline_builder.hpp  render_pass_builder.cpp  render_pass_builder.hpp  swap_chain_builder.cpp  swap_chain_builder.hpp
source/context/: context.hpp  context_builder.cpp  context_builder.hpp
source/core/: application.cpp  dependencies.cpp  dependencies.hpp  entry.cpp  exception.cpp
source/erupch/: erupch.hpp
source/eruptor/: eruptor.cpp  eruptor.hpp
source/events/: input_events.hpp  window_event.hpp
source/events/observer/: dispatchable.hpp  event_dispatcher.hpp  event_listener.hpp
source/identifier/: id.cpp  id.hpp  id_generator.cpp  id_generator.hpp
source/input/: actions.hpp  gamepad.cpp  gamepad.hpp  input.hpp  input_conversions.cpp  input_conversions.hpp  user_input.cpp  user_input.hpp
source/math/: uniform_buffer_object.hpp  vertex.cpp  vertex.hpp
source/mesh/: mesh.hpp  vertex.cpp
source/reference/: base_reference.cpp  base_reference.hpp  reference.hpp  referenceable.cpp  referenceable.hpp
source/renderer/: buffer.cpp  buffer.hpp  camera.cpp  camera.hpp  descriptor_sets.cpp  descriptor_sets.hpp  device.cpp  device.hpp  device_queue.cpp  device_queue.hpp  image.cpp  image.hpp  image_view.cpp  image_view.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  shader.cpp  shader.hpp  swap_chain.cpp  swap_chain.hpp
source/renderer/device/: device.cpp  device.hpp  device_builder.cpp  device_builder.hpp
source/renderer/image/: image.cpp  image.hpp
source/renderer/passes/: depth_pass.cpp  depth_pass.hpp  geometry_pass.cpp  geometry_pass.hpp  lighting_pass.cpp  lighting_pass.hpp  luminance_pass.cpp  luminance_pass.hpp  tone_map_pass.cpp  tone_map_pass.hpp
source/renderer/render_pass/: render_pass.cpp  render_pass.hpp  render_pass_builder.cpp  render_pass_builder.hpp
source/renderer/swap_chain/: swap_chain.cpp  swap_chain.hpp  swap_chain_builder.cpp  swap_chain_builder.hpp
source/scene/: material.hpp  scene.cpp  scene.hpp  sub_mesh.hpp  vertex.cpp  vertex.hpp
source/services/: context.cpp  environment.cpp  locator.cpp  locator.hpp  logger.cpp  platform.cpp  renderer.cpp  window.cpp
source/services/context/: context.cpp  context.hpp
source/services/input_manager/: input_manager.cpp  input_manager.hpp
source/services/system_event_dispatcher/: system_event_dispatcher.cpp  system_event_dispatcher.hpp
source/shader_compiler/: shader_compiler.cpp  shader_compiler.hpp
source/utility/: exception.hpp  lazy_hasher.hpp  runtime_assert.hpp  type_index.hpp  unique_pointer.hpp  variant_visitor.hpp  void_deleter.hpp
source/window/: window.cpp  window.hpp
